@@ -415,6 +415,28 @@ function pretty_ezportalpages_filter($urls)
 }	
 
 
+// Prety Aeva Media Filter
+function pretty_aeva_filter($urls)
+{
+   global $boardurl;
+
+   $pattern = array(
+      '~.*[?;&]action=media;sa=media;in=([0-9]+);(thumba?|preview)(.*)~S',
+      '~.*[?;&]action=media;sa=(album|item|media);in=([0-9]+)(.*)~S',
+      '~.*[?;&]action=media(.*)~S',
+   );
+   $replacement = array(
+      $boardurl . '/media/$2/$1/?$3',
+      $boardurl . '/media/$1/$2/?$3',
+      $boardurl . '/media/?$2',
+   );
+   foreach ($urls as $url_id => $url)
+      if (!isset($url['replacement']) && strpos($url['url'], 'action=media') !== false)
+         $urls[$url_id]['replacement'] = preg_replace($pattern, $replacement, $url['url']);
+   return $urls;
+}
+
+
 ]]></add>
 		</operation>
 	</file>
